--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
  <footer>
     <p>TODOS LOS DERECHOS RESERVADOS</p>
  </footer>
+ <input type="button" id="abrirVentana" value="Abrir Ventana" >
+ <input type="button" id="cerrarVentana" value="Cerrar Ventana">
 
- <script src="js/script4.js"></script>
 
 </body>
 </html>
