--- a/reloj.html
+++ b/reloj.html
@@ -6,7 +6,14 @@
     <title>Titulo</title>
 </head>
 <body>
-   
+   <input type="button" value="abrir" id="abrir">
+   <input type="button" value="abriryd" id="abriryd">
+   <input type="button" value="cerrar" id="cerrar">
+   <input type="button" value="foco" id="foco">
+   <input type="button" value="qfoco" id="qfoco">
+   <input type="button" value="scrolla" id="scrolla">
+   <input type="button" value="scrollr" id="scrollr">
+
     <script src="js/script4.js"></script>
 </body>
 
