--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
  </footer>
  <input type="button" id="abrirVentana" value="Abrir Ventana" >
  <input type="button" id="cerrarVentana" value="Cerrar Ventana">
-
+<script src="js/script5.js"></script>
 
 </body>
 </html>
