--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </footer>
     <input type="button" id="abrir" value="Abrir Ventana">
     <input type="button" id="cerrarVentana" value="Cerrar Ventana">
-    <script src="js/script5.js"></script>
+    <script src="js/ej28.js"></script>
 
 </body>
 
