--- a/ej6.html
+++ b/ej6.html
@@ -9,16 +9,14 @@
 
 <body>
     <h2>Formulario de Registro</h2>
-    <form name="myForm" id="formulario"  method="get">
-
+    <form name="myForm" id="formulario" method="get" action="mailto:example@example.com" onsubmit="return validateForm()">
         <label for="nombre">Escribe tu nombre (solo en mayúsculas):</label>
         <input type="text" id="nombre" name="nombre" required>
         <br><br>
 
-        
-            <img id="imagen" src="img/11367109.png" alt="Enviar" width="100" height="50">
-        
+        <img id="imagen" src="img/11367109.png" alt="Enviar" width="100" height="50" style="cursor: pointer;">
     </form>
+
     <script src="js/bol5-ej6.js"></script>
 </body>
 
