--- a/formulario.html
+++ b/formulario.html
@@ -31,6 +31,7 @@
             <li>
                 <label for="nombre">Nombre</label>
                 <input id="nombre" name="nombre" type="text" placeholder="Nombre" pattern="\w{3,16}" required />
+                <span id="error1"></span>
             </li>
 
             <li>
@@ -45,13 +46,13 @@
 
             <li>
                 <label for="pass">Contraseña</label>
-                <input type="password" id="pass" name="password" minlength="8" placeholder="Contraseña"
+                <input type="password" id="pass1" name="password" minlength="8" placeholder="Contraseña"
                     pattern="^(?=.*[A-Z])(?=.*[a-z])(?=.*[0-9])(?=.*\W)[A-Za-z0-9\W]{8,20}$" required />
             </li>
 
             <li>
-                <label for="pass">Confirmar Contraseña</label>
-                <input type="password" id="pass" name="password" minlength="8" placeholder="Confirmar Contraseña"
+                <label for="pass2">Confirmar Contraseña</label>
+                <input type="password" id="pass2" name="password" minlength="8" placeholder="Confirmar Contraseña"
                     pattern="^(?=.*[A-Z])(?=.*[a-z])(?=.*[0-9])(?=.*\W)[A-Za-z0-9\W]{8,20}$" required />
             </li>
 
@@ -79,6 +80,7 @@
                 <label for="anio">Año</label>
                 <input type="number" id="anio" name="anio" min="1970" max="2024" placeholder="Año" required />
                 <span id="edad"></span>
+                <span id="error"></span>
             </li>
 
             <li>
@@ -97,12 +99,13 @@
 
             <li>
                 <label for="email">Email</label>
-                <input type="email" id="email" pattern=".+@\w+\.com" size="30" required />
+                <input  id="email"  size="30" required />
             </li>
 
 
             <li>
                 <input id="submit" type="submit" value="Enviar">
+                <button id="boton" type="button">Borrar</button>
             </li>
         </ul>
     </form>
