--- a/formulario.html
+++ b/formulario.html
@@ -30,38 +30,42 @@
         <ul>
             <li>
                 <label for="nombre">Nombre</label>
-                <input id="nombre" name="nombre" type="text" placeholder="Nombre" pattern="\w{3,16}" required />
-                <span id="error1"></span>
+                <input id="nombre" name="nombre" type="text" placeholder="Nombre"  />
+                <span class="errort"></span>
             </li>
 
             <li>
                 <label for="apellido">Apellidos</label>
-                <input id="apellido" name="apellido" type="text" placeholder="Apellido" pattern="\w{3,16}" required />
+                <input id="apellido" name="apellido" type="text" placeholder="Apellido" pattern="\w{3,16}"  />
+                <span class="errort"></span>
             </li>
 
             <li>
                 <label for="usuario">Usuario</label>
-                <input type="text" id="usuario" size="30" required />
+                <input type="text" id="usuario" size="30"  />
+                <span class="errort"></span>
             </li>
 
             <li>
                 <label for="pass">Contraseña</label>
                 <input type="password" id="pass1" name="password" minlength="8" placeholder="Contraseña"
-                    pattern="^(?=.*[A-Z])(?=.*[a-z])(?=.*[0-9])(?=.*\W)[A-Za-z0-9\W]{8,20}$" required />
+                    pattern="^(?=.*[A-Z])(?=.*[a-z])(?=.*[0-9])(?=.*\W)[A-Za-z0-9\W]{8,20}$"  />
             </li>
 
             <li>
                 <label for="pass2">Confirmar Contraseña</label>
                 <input type="password" id="pass2" name="password" minlength="8" placeholder="Confirmar Contraseña"
-                    pattern="^(?=.*[A-Z])(?=.*[a-z])(?=.*[0-9])(?=.*\W)[A-Za-z0-9\W]{8,20}$" required />
+                    pattern="^(?=.*[A-Z])(?=.*[a-z])(?=.*[0-9])(?=.*\W)[A-Za-z0-9\W]{8,20}$"  />
+                <span id="errorpass"></span>
             </li>
 
             <li>
                 <label for="dia">Día</label>
-                <input type="text" id="dia" name="dia" placeholder="Día" pattern="\d{1,2}" required />
+                <input type="text" id="dia" name="dia" placeholder="Día" pattern="\d{1,2}"/>
+                <span id="errordia"></span>
            
                 <label for="mes">Mes</label>
-                <select id="mes" name="mes" required>
+                <select id="mes" name="mes" >
                     <option value="">Selecciona el mes</option>
                     <option value="01">Enero</option>
                     <option value="02">Febrero</option>
@@ -76,16 +80,17 @@
                     <option value="11">Noviembre</option>
                     <option value="12">Diciembre</option>
                 </select>
+                <span id="errormes"></span>
             
                 <label for="anio">Año</label>
-                <input type="number" id="anio" name="anio" min="1970" max="2024" placeholder="Año" required />
+                <input type="number" id="anio" name="anio" min="1970" max="2024" placeholder="Año"  />
                 <span id="edad"></span>
                 <span id="error"></span>
             </li>
 
             <li>
                 <label for="sexo">Sexo</label>
-                <select id="sexo" name="sexo" required>
+                <select id="sexo" name="sexo" >
                     <option value="" disabled selected></option>
                     <option value="hombre">Hombre</option>
                     <option value="mujer">Mujer</option>
@@ -99,7 +104,8 @@
 
             <li>
                 <label for="email">Email</label>
-                <input  id="email"  size="30" required />
+                <input  id="email"  size="30"  />
+                <span id="erroremail"></span>
             </li>
 
 
