me has costado pero hecho

--- a/cooke1.html
+++ b/cooke1.html
@@ -45,7 +45,7 @@
         <p>¡Su café será enviado a su número de habitación!</p>
 
         <div>
-            <button id="button" type="submit">Enviar Pedido</button>
+            <button id="btn">Enviar Pedido</button>
         </div>
 
     </form>
