--- a/formej13.html
+++ b/formej13.html
@@ -28,6 +28,12 @@
                 valor2 = valor2.toUpperCase();
 
                 document.getElementById("miCuadroTexto").value = valor2;
+            }else{
+                let valor2 = document.getElementById("miCuadroTexto").value;
+                valor2 = valor2.toLowerCase();
+
+                document.getElementById("miCuadroTexto").value = valor2;
+
             }
         })
 
