--- a/formnumero.html
+++ b/formnumero.html
@@ -11,7 +11,7 @@
 
     <form id="smsForm">
         <label for="smsText">Mensaje (Máximo 145 caracteres):</label><br>
-        <textarea id="smsText" name="smsText" rows="4" cols="50" maxlength="145" pattern="[A-Za-z0-9.,!?ÁáÉéÍíÓóÚúÑñ ]*" placeholder="Escribe tu mensaje..." required></textarea>
+        <textarea id="smsText" name="smsText" rows="4" cols="50" maxlength="145" pattern="[A-Za-z0-9.,!?ÁáÉéÍíÓóÚúÑñ ]*" placeholder="Escribe tu mensaje..."></textarea>
 
         
         <span id="cuenta">145 caracteres restantes</span><br><br>
