--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
     </footer>
     <input type="button" id="abrir" value="Abrir Ventana">
     <input type="button" id="cerrarVentana" value="Cerrar Ventana">
-    <script src="js/citas.js"></script>
-    <script src="js/Cliente.js"></script>
+    <script src="js/script5.js"></script>
+
 
 </body>
 
