--- a/mq.html
+++ b/mq.html
@@ -26,6 +26,7 @@
         <div class="noveno"></div>
         <div class="decimo"></div>
     </footer>
-    
+    <script src="js/script5.js"></script>
+
 </body>
 </html>
