--- a/formulario.html
+++ b/formulario.html
@@ -31,25 +31,26 @@
             <li>
                 <label for="nombre">Nombre</label>
                 <input id="nombre" name="nombre" type="text" placeholder="Nombre"  />
-                <span class="errort"></span>
+                <span id="errort"></span>
             </li>
 
             <li>
                 <label for="apellido">Apellidos</label>
                 <input id="apellido" name="apellido" type="text" placeholder="Apellido" pattern="\w{3,16}"  />
-                <span class="errort"></span>
+                <span id="errort"></span>
             </li>
 
             <li>
                 <label for="usuario">Usuario</label>
                 <input type="text" id="usuario" size="30"  />
-                <span class="errort"></span>
+                <span id="errort"></span>
             </li>
 
             <li>
                 <label for="pass">Contraseña</label>
                 <input type="password" id="pass1" name="password" minlength="8" placeholder="Contraseña"
                     pattern="^(?=.*[A-Z])(?=.*[a-z])(?=.*[0-9])(?=.*\W)[A-Za-z0-9\W]{8,20}$"  />
+                <span id="errorpass"></span>
             </li>
 
             <li>
