--- a/test.html
+++ b/test.html
@@ -53,6 +53,7 @@
                 <label for="respuesta1D">Valencia</label>
             </div>
             <div class="campo-respuesta">
+                <span id="incorrecta"></span>
                 <span id="correcta1"></span>
             </div>
         </div>
@@ -82,7 +83,7 @@
         <input type="submit" value="Enviar" id="submit">
     </form>
 
-    <script src="js/test.js"></script>
+    <script src="js/test2.js"></script>
 </body>
 
 </html>
