--- a/test.html
+++ b/test.html
@@ -83,7 +83,7 @@
         <input type="submit" value="Enviar" id="submit">
     </form>
 
-    <script src="js/test2.js"></script>
+    <script src="js/test.js"></script>
 </body>
 
 </html>
